src/components/Cheatsheet.module.css
.cheatsheet {
  height: auto !important;
  /* page height - navbar height - some spacing*/
  max-height: calc(100vh - 76px - 1rem) !important;
  margin: 0px auto !important;
  border: none !important;
  border-top-left-radius: 1rem;
  border-top-right-radius: 1rem;
  width: 528px;

  box-shadow: 6px -3px 12px 3px rgba(0, 0, 0, 0.1);
}

:root[data-theme='dark'] .cheatsheet {
  box-shadow: 6px -3px 12px 3px rgba(0, 0, 0, 0.5);
}

.cheatsheet button[aria-label='Close'] {
  margin-bottom: auto;
}

.cheatsheet a {
  color: inherit !important;
}

.cheatsheet .cheatsheet-list-item {
  align-items: start;
}

.cheatsheet-list-item.upcoming-feature {
  opacity: 0.25;
}

.cheatsheet-list-item h6 {
  margin-bottom: 0.1rem;
}

.numbered {
  display: flex;
  justify-content: center;
  align-items: center;
  min-width: 2rem;
  height: 2rem;
  border-radius: 50%;
  background-color: rgb(0, 0, 0);
  color: white;
}

:root[data-theme='dark'] .numbered {
  color: rgb(0, 0, 0);
  background-color: white;
}

